# Aurora-Legion

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  flake.nix
.github/ISSUE_TEMPLATE/: unsupported_keyboard.yml
.github/workflows/: ci.yml  release.yml
app/: Cargo.toml
app/src/: enums.rs  main.rs
app/src/gui/: effect_ui.rs  mod.rs
app/src/manager/: custom_effect.rs  profile.rs
contrib/: build-appimage.sh  build-common.sh  build-tarball.sh
contrib/appimage/: AppRun
contrib/tarball/: README.txt  install.sh
daemon/: Cargo.toml
daemon/src/: cli.rs  client.rs  core.rs  hotkey.rs  keyboard.rs  main.rs  server.rs  settings.rs
daemon/src/engine/: mod.rs
daemon/src/engine/effects/: ambient.rs  christmas.rs  disco.rs  fade.rs  lightning.rs  ripple.rs  swipe.rs  temperature.rs
docs/: install-with-ai.md  measure.sh  measurements.md  protocol.md  quick-start.md  style-guide.md
docs/superpowers/specs/: 2026-07-19-cross-platform-design.md
driver/src/: lib.rs
gui/: Cargo.toml
gui/data/: com.github.hugh.LegionKbRgb.desktop  io.github.HughScott2002.Aurora.desktop
gui/src/: app.rs  daemon_actions.rs  ipc.rs  main.rs  preview.rs
gui/src/pages/: custom_effects.rs  daemon_page.rs  lighting.rs  mod.rs  profiles.rs
hooks/: pre-push
protocol/: Cargo.toml
protocol/src/: custom_effect.rs  effects.rs  ipc.rs  lib.rs  profile.rs  storage.rs
systemd/: aurora.service  legion-kb.service
udev/: 99-aurora.rules
