[package]
name = "aurora"
version = "0.22.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
legion-rgb-driver = { path = "../driver" }
aurora-protocol = { path = "../protocol" }

clap = { version = "4.5.37", features = ["color", "cargo", "derive"] }

crossbeam-channel = "0.5.15"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = "0.27.1"
thiserror = "2.0.12"
error-stack = "0.5.0"
dirs = "6.0"
signal-hook = "0.3"

# Temperature effect
sysinfo = "0.35.0"

# Ripple effect + hotkey profile cycling
device_query = "4.0.1"

# AmbientLight effect (screen capture)
scrap = { git = "https://github.com/rustdesk/rustdesk", rev = "4d3ccc6", features = [
    "wayland",
] }
fast_image_resize = "5.1.3"
photon-rs = { git = "https://github.com/silvia-odwyer/photon", rev = "b7e57c9", default-features = false }

# HACK: mirror of the app crate's rust-analyzer workaround so local builds can
# opt into pkg-config discovery for scrap's native deps.
[features]
scrap-pkg-config = ["scrap/linux-pkg-config"]
