[package]
name = "aurora-gui"
version = "0.21.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
aurora-protocol = { path = "../protocol" }

# gnome_48 targets GTK 4.18 / libadwaita 1.7 — safely below the system
# libraries (GTK 4.20 / adw 1.8) while covering every widget in use.
relm4 = { version = "0.11.0", features = ["libadwaita", "gnome_48"] }

crossbeam-channel = "0.5.15"
serde_json = "1.0.140"
strum = "0.27.1"
