[package]
name = "aurora-gui"
version = "0.21.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
aurora-protocol = { path = "../protocol" }

# gnome_46 targets GTK 4.14 / libadwaita 1.5, the Ubuntu 24.04 LTS
# baseline. The newest APIs in use are ColorDialogButton (GTK 4.10) and
# adw::AlertDialog (adw 1.5), so nothing is lost by staying this low.
relm4 = { version = "0.11.0", features = ["libadwaita", "gnome_46"] }

crossbeam-channel = "0.5.15"
serde_json = "1.0.140"
strum = "0.27.1"
